--- a/styles.css
+++ b/styles.css
@@ -21,29 +21,39 @@ body {margin: 0 auto;
 
 /* EMPIEZA EL MENu */
 nav.menu {
+position: relative;
+position: fixed;
 top: 0;
 left: 0;
 width: 100%;
 height: 10vh;
-background-color: #1a1a1a;
+/*background-color: #1a1a1a;*/
 display: flex;
 align-items: center;
-justify-content: center;}
+justify-content: center;
+transition: 0.6s;
+z-index: 1000;}
+
 
 div.contenedor{width: 60%;
 text-align: center;}
 
-.link{color: white;
-text-decoration: none;}
 
 
 .elementos_menu{list-style: none;
+position: relative;
 color: white;
 display: flex;
 flex-direction: row;
 align-items: center;
-flex-wrap: wrap;
 justify-content: space-evenly;}
+
+.elementos_menu .link{position: relative;
+    color: white;
+    text-decoration: none;}
+
+nav.sticky {background-color: #1a1a1a;}
+    
 
 /* TERMINA EL MENU*/
 
