--- a/styles.css
+++ b/styles.css
@@ -135,6 +135,48 @@ color: #1a1a1a;}
 
 /*TERMINA LA SECCION DE PRESENTACION*/
 
+
+/*EMPIEZA LA SECCION DE INTEGRANTES*/
+
+
+.integrantes{ margin: 0 auto;
+    width: 100%;
+height: 100vh;
+text-align: center;
+}
+
+.integrantes h2{font-family: HelveticaNowDisplay;
+font-size: 4em;}
+
+.contenedor_tarjetas{margin: 0 auto;
+    width: 90%;
+height: 50vh;
+display: flex;
+flex-wrap: wrap;
+justify-content:space-around;
+}
+
+.contenedor_tarjetas > .tarjeta{width: 500px;
+height: 450px;
+overflow: hidden;
+border-radius: 25px;}
+
+.contenedor, .tarjeta, img {width:500px;}
+
+
+.tarjeta h3{font-family: HelveticaNowDisplay;}
+
+
+.contenedor_tarjetas > .tarjeta:hover{
+    transform: translateY(-15px);
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
+}
+
+
+
+
+
+
 footer {display: flex;
     align-items: center;
     justify-content: space-around;
