--- a/styles.css
+++ b/styles.css
@@ -53,6 +53,10 @@ justify-content: space-evenly;}
     color: white;
     text-decoration: none;}
 
+    .elementos_menu .link:hover{
+        color: rgb(228, 228, 228);
+        text-decoration:none}
+
 nav.sticky {background-color: #1a1a1a;}
     
 
@@ -142,7 +146,7 @@ color: #1a1a1a;}
 
 .integrantes{ margin: 0 auto;
     width: 100%;
-height: 100vh;
+height: 85vh;
 text-align: center;
 }
 
@@ -188,8 +192,80 @@ bottom: 60px;}
     box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 }
 
+/*TERMINA LA SECCION DE INTEGRANTES*/
 
 
+
+/*EMPIEZA LA SECCION DE MUSICA*/
+
+.musica{margin: 0 auto;
+    width: 100%;
+height: auto;
+background-color: #1a1a1a;
+color: white;
+text-align: center;
+}
+
+.musica h3 {font-size: 4em;
+font-family: poppins;
+padding-top: 3%;}
+
+
+.contenedor_musica{width: 100%;
+    height: auto;
+display: flex;
+flex-direction: row;
+justify-content: center;
+align-items: center;}
+
+.contenedor_portada {
+
+    width: 50%;
+height: auto;
+display: flex;
+flex-direction: column;
+justify-content: space-around;
+align-items: center;
+}
+
+.contenedor_portada > img{width: 700px;}
+
+.contenedor_portada > span{margin: 3%;
+font-size: 3em;
+font-family: Poppins;}
+
+.texto_eclipse {position: relative;
+    width: 50%;
+height: 50vh;
+display: flex;
+flex-wrap: wrap;
+flex-direction: column;
+justify-content: center;
+align-content: center;
+align-items: center;
+text-align: left;}
+
+.texto_eclipse p {position: absolute;
+    top: 20%;
+    font-size: 2em;
+}
+
+.texto_eclipse button{position: absolute;
+color: white;
+text-align: center;
+right: 30%;
+bottom: 20%;
+font-family: poppins;
+font-size: 3em;
+background-color: #1a1a1a;
+border:  2px solid white;
+padding: 0% 8% 0% 8%;}
+
+.texto_eclipse button:hover{background-color: white;
+color: #1a1a1a;}
+
+
+/*TERMINA LA SECCION DE MUSICA*/
 
 
 
