--- a/styles.css
+++ b/styles.css
@@ -228,6 +228,34 @@ justify-content: space-around;
 align-items: center;
 }
 
+.img_hover {position: relative;
+    width: 500px;
+    height: 500px;}
+
+    .contenido_hover{width: 100%;
+        height: 100%;
+        position: absolute;
+        top: 0;
+        left: 0;
+        background: rgba(0, 0, 0, 0.6);
+        display: flex;
+        justify-content:center ;
+        align-items: center;
+        opacity: 0;
+transition: 0.6s;
+
+}
+
+.contenido_hover:hover{opacity: 1;}
+
+.contenido_hover ul li {list-style: none;
+    text-align: left;
+font-family: poppins;
+font-size: 2em;
+}
+
+
+
 .contenedor_portada > img{width: 700px;}
 
 .contenedor_portada > span{margin: 3%;
@@ -253,13 +281,13 @@ text-align: left;}
 .texto_eclipse button{position: absolute;
 color: white;
 text-align: center;
-right: 30%;
+right: 35%;
 bottom: 20%;
 font-family: poppins;
-font-size: 3em;
+font-size: 2.5em;
 background-color: #1a1a1a;
 border:  2px solid white;
-padding: 0% 8% 0% 8%;}
+padding: 2% 8% 2% 8%;}
 
 .texto_eclipse button:hover{background-color: white;
 color: #1a1a1a;}
