--- a/styles.css
+++ b/styles.css
@@ -312,6 +312,18 @@ border-radius: 85px;
 padding: 2%;}
 
 
+/*TERMINA SECCION EVENTOS*/
+
+
+/*EMPIEZA SECCION GALERIA*/
+
+.galeria{width: 100%;
+height: 100vh;
+background: linear-gradient(#FFF, #b2bec3);}
+
+
+
+/*TERMINA SECCION GALERIA*/
 
 footer {display: flex;
     align-items: center;
