--- a/styles.css
+++ b/styles.css
@@ -17,6 +17,7 @@
 body {margin: 0 auto;
     font-family: SpaceGrotesk;
     color: #1a1a1a;
+    overflow-x: hidden;
 }
 
 
@@ -65,16 +66,17 @@ nav.sticky {background-color: #1a1a1a;}
 
 /* EMPIEZA EL HEADER */
 
-
+header{width: 100%;}
 
 .parent {margin: 0 auto;
+    width: 100%;
+    height: 100vh;
     position: relative;
     background:linear-gradient(rgba(5, 7, 12, 0.40), rgba(5, 7, 12, 0.40)), url(./assets/img/banda_img1.jpg);
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
+    
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     grid-template-rows: repeat(5, 1fr);
@@ -84,19 +86,23 @@ nav.sticky {background-color: #1a1a1a;}
     
 
     
-    .logo { grid-area: 1 / 1 / 3 / 6; 
+    .logo {
+        
+        grid-area: 1 / 1 / 3 / 6; 
 
             text-align: center;
         display: flex;
     align-items: center;
 justify-content: center;}
 
+.logo img{width: 350px;}
+
     .noct2 { grid-area: 3 / 1 / 6 / 3;
     position:absolute;
     left: 100px;
     bottom: 100px; ;
-    font-size: 8em;
-    line-height: 150px;
+    font-size: 7em;
+    line-height: 120px;
     color: white;}
 
     .texto { grid-area: 3 / 3 / 6 / 5;
@@ -154,21 +160,21 @@ text-align: center;
 font-size: 4em;}
 
 .contenedor_tarjetas{margin: 0 auto;
-    width: 90%;
+    width: 100%;
 height: 50vh;
 display: flex;
-flex-wrap: wrap;
-justify-content:space-around;
+flex-wrap: nowrap;
+justify-content:space-evenly;
 text-align: left;
 }
 
 .contenedor_tarjetas > .tarjeta{
-    width: 500px;
-height: 500px;
+    width: 400px;
+height: 400px;
 overflow: hidden;
 border-radius: 25px;}
 
-.contenedor, .tarjeta, img {width:500px;}
+.contenedor, .tarjeta, img {width:400px;}
 
 .tarjeta{position: relative;}
 
@@ -177,13 +183,14 @@ border-radius: 25px;}
     font-family: Poppins;
     color: #1a1a1a;
 font-size: 2em;
-left: 45px;}
+left: 45px;
+bottom:35px;}
 
 
 .tarjeta span{ position: absolute;
 font-size: 1.5em;
 left: 45px;
-bottom: 60px;}
+bottom: 40px;}
 
 
 
@@ -235,6 +242,8 @@ align-items: center;
     width: 500px;
     height: 500px;}
 
+    .img_hover img{width: 100%;}
+
     .contenido_hover{width: 100%;
         height: 100%;
         position: absolute;
@@ -259,11 +268,11 @@ font-size: 2em;
 
 
 
-.contenedor_portada > img{width: 700px;}
+.contenedor_portada > img{width: 100%;}
 
 
 .texto_eclipse {position: relative;
-    width: 50%;
+    width: 45%;
 height: 50vh;
 display: flex;
 flex-wrap: wrap;
@@ -327,21 +336,24 @@ text-align: center;}
 
 
 
-.texto_ev{
+.texto_ev{font-size: 1em;
 background: #FFF;
 margin-left: -20px;}
 
 .texto_ev > #fecha{font-family: poppins;
-font-size: 1.2em;}
+}
 
-.texto_ev > #lugar{font-size: 1em;}
+.texto_ev > #lugar{font-family: poppins;}
 
 
-.img_ev{width:auto;
+.img_ev{width:30%;
 height: 30vh;
 overflow: hidden;
 transition: 0.6s;
 border-radius: 0px;}
+
+.img_ev img{width: 100%;
+height: auto;}
 
 .img_ev img:hover{border-radius: 25px;}
 
@@ -366,30 +378,77 @@ background: linear-gradient(#FFF, #b2bec3);}
 
 /*TERMINA SECCION GALERIA*/
 
-footer {display: flex;
+
+footer {width: 100%;
+    margin: 0 auto;
+    padding: 0;
+    display: flex;
     align-items: center;
-    justify-content: space-around;
+    justify-content: space-between;
+    flex-wrap: nowrap;
     margin: 0;
-    width: 100%;
+    font-size: 1em;
+    list-style: none;
+
+
+    
+    
 height: 8vh;
 background-color: #1a1a1a;
 color: white;}
 
-footer span {text-align: center;}
 
 
-.contenedor_footer{width: 15%;
-    display: flex;
-    justify-content: center;}
 
 
-footer ul {display: flex; flex-direction: row;
+footer span {text-align: center;
+margin-left: 5%;}
+
+
+
+.contenedor_footer{display: flex;
+    justify-content: center;
+    width: 300px;
+    }
+
+
+footer ul{display: flex;
     width: 100%;
-    justify-content: space-around;
-    align-items: center;
-list-style: none;}
+    justify-content:space-between;
+list-style:none;}
 
 
 
 footer .contenedor_footer ul li a{color: white;
-text-decoration: none;}
+text-decoration: none;
+list-style: none;}
+
+
+  
+  
+  /*Tablet*/
+  @media (min-width: 421px) and (max-width:810px) {
+  
+    body{
+      background:blue;
+    }
+    
+    div.contenedor{width: 80%;
+        text-align: center;}
+
+    .elementos_menu{
+        justify-content: space-around;}
+
+  }
+
+
+
+  /*Celular*/
+@media (max-width: 420px) {
+
+    body{
+      background:red;
+    }
+   
+      
+  }
