--- a/styles.css
+++ b/styles.css
@@ -271,7 +271,7 @@ font-size: 2em;
 
 .contenedor_portada > img{width: 100%;}
 
-
+.texto_eclipse_media{display: none;}
 .texto_eclipse {position: relative;
     width: 45%;
 height: 50vh;
@@ -524,6 +524,45 @@ padding-bottom: 25px;}
          
 
          /*EMPIEZA MUSICA*/
+
+         .musica h3{font-size: 3em;}
+
+         .contenedor_musica{flex-direction: column;
+        align-items: center;
+    align-content: center;
+justify-content: center;}
+
+.contenido_hover{cursor: pointer;}
+         
+.texto_eclipse {display: none;
+  }
+
+  .texto_eclipse_media{  width: 70%;
+    height: 50vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: stretch;
+    text-align: center;}
+
+    .texto_eclipse_media p {
+        font-size: 2em;
+    }
+    
+    .texto_eclipse_media button{
+    color: white;
+    text-align: center;
+    font-family: poppins;
+    font-size: 2.5em;
+    background-color: #1a1a1a;
+    border:  2px solid white;
+    padding: 2% 8% 2% 8%;}
+    
+    .texto_eclipse_media button:hover{background-color: white;
+    color: #1a1a1a;}
+
+
+         
 
 
          .spotify{display: none;}
