--- a/styles.css
+++ b/styles.css
@@ -388,7 +388,7 @@ background: linear-gradient(#FFF, #b2bec3);}
 
 /*TERMINA SECCION GALERIA*/
 
-
+/*EMPIEZA FOOTER*/
 footer {width: 100%;
     margin: 0 auto;
     padding: 0;
@@ -434,13 +434,12 @@ text-decoration: none;
 list-style: none;}
 
 
-  
+   /*TERMINA FOOTER*/
   
   /*Tablet*/
   @media (min-width: 421px) and (max-width:810px) {
   
     body{
-      background:gray;
     }
     
     div.contenedor{width: 80%;
@@ -498,6 +497,7 @@ justify-content:center;
 gap: 50px;
 align-items: center;
 text-align: center;
+
 }
 
 .img_tarjeta{width: 400px;
@@ -510,7 +510,7 @@ overflow: hidden;
     width: 400px;
     height:375px;
     background: white;
-
+    box-shadow: 0 12px 16px rgba(0, 0, 0, 0.2);
 border-radius: 25px;}
 
 .tarjeta_media > h3{font-size: 1.5em;
@@ -566,21 +566,85 @@ justify-content: center;}
 
 
          .spotify{display: none;}
-         
+
+
          /*TERMINA MUSICA*/
+
+        /*EMPIEZA EVENTOS*/
+
+
+        .eventos h3{
+            font-size: 1em;
+            }
+            
+            
+            .contenedor_ev{margin: 0 auto;
+                width: 80%;
+                height: 20vh;
+                margin-bottom: 5%;
+                
+            }
+            
+            
+            
+            
+            .texto_ev{font-size: 0.5em;
+           }
+            
+           
+            
+            .img_ev{width:35%;
+            height: 20vh;}
+
+            /*TERMINA EVENTOS*/
+            
+
+            /*EMPIEZA FOOTER*/
+
+
+            footer {
+                height: 10vh;
+                font-size: 0.7em;
+                background-color: #1a1a1a;
+                 color: white;
+                justify-content: center;}
+            
+            
+            footer span.disclaimer{margin:0;}
+            
+            
+            footer span.banda{text-align: center;
+            margin-right: 5%;}
+            
+            
+            
+            .contenedor_footer{display: flex;
+                justify-content: space-between;
+                width: 80%;
+                }
+            
+            
+            footer ul{width: 100%;
+                justify-content: space-evenly;
+                padding: 0;}
+            
+            
+            
 
          
 
   }
-
+        
+        
+        
 
 
   /*Celular*/
 @media (max-width: 420px) {
 
-    body{
-      background:red;
-    }
+   
+
+
    
       
   }
