--- a/styles.css
+++ b/styles.css
@@ -473,12 +473,35 @@ img {
 
 .galeria {
     width: 100%;
-    height: 100vh;
+    height: auto;
+    margin:0 auto;
     background: linear-gradient(#FFF, #b2bec3);
 }
 
+.container{ 
+    margin: 0 auto;
+    width: 80%;
+    height: auto;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 400px;
+    grid-gap: 40px;
+    padding: 100px 0;}
+
+.box img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.box:nth-child(1){
+    grid-column-start:  span 2;
+}
 
 
+.box:nth-child(4){
+    grid-column-start:  span 2;
+}
 /*TERMINA SECCION GALERIA*/
 
 /*EMPIEZA FOOTER*/
@@ -732,14 +755,14 @@ footer .contenedor_footer ul li a {
 
 
     .texto_ev {
-        font-size: 0.5em;
+        font-size: 0.3em;
     }
 
 
 
     .img_ev {
-        width: 35%;
-        height: 20vh;
+        width: 30%;
+        height: 100%;
     }
 
     /*TERMINA EVENTOS*/
